解决部分warning